Automate channel model pricing and supplier routing